--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,5 @@
 # PORT=
 MONGODB_URI = "mongodb+srv://saishyamn36:EE3wSWOSNu4BmVN7@cluster0.n0hhbgv.mongodb.net"
+CLOUDINARY_API_KEY="855232366142628"
+CLOUDINARY_API_SECRET="ApfC_cuFFeJEhDwEwam99KG_nvs"
+CLOUDINARY_NAME = "dquu2dibe"
