--- a/admin_shopee/package.json
+++ b/admin_shopee/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
+    "ant-design": "^1.0.0",
     "antd": "^5.24.9",
     "axios": "^1.9.0",
     "react": "^19.0.0",
