--- a/admin_shopee/package.json
+++ b/admin_shopee/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.0.2",
     "ant-design": "^1.0.0",
     "antd": "^5.24.9",
+    "antd-style": "^3.7.1",
     "axios": "^1.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
